syntax = "proto3";

option csharp_namespace = "TestWinformClient.Protos";


//The "Service Connections" is essentially a C# class. 
// The service has "rpc" or remote prodcedure calls that act like C# methods
// rpc's require "messages" to be sent and returned (indicated by the "returns" keyword)
// There are different types of rpc which can use different types of message
service Connections {
  rpc TestConnection (TestRequest) returns (TestReply);
  rpc EstablishConnectionHealthCheck (ConnectionRequest) returns (ConnectionResponse);
  rpc GetAvailableLicenseCount (LicenseCountRequest) returns (LicenseCountResponse);
}

message TestRequest {

}

message TestReply{
	string connectionResponse = 1;
}

message ConnectionRequest{

}

message ConnectionResponse{
	string licence = 1;
	int32 connectedClients = 2;
}

message LicenseCountRequest {

}

message LicenseCountResponse{
	int32 numberOfAvailableLicenses = 1;
}