syntax = "proto3";

option csharp_namespace = "TestWinformClient.Protos";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc TestConnection (TestRequest) returns (TestReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message TestRequest {

}

message TestReply{
	string connectionResponse = 1;
}
